--- a/index.html
+++ b/index.html
@@ -17,32 +17,37 @@
     </header>
     <section>
         <div class="left">
-            <h2>Select characteristics</h2>
+            <h2 class="supertitle">Select characteristics</h2>
             <div class="inputname">
                 <label for="childname">Enter name: </label><input type="text" name="childname" id="childname">
             </div>
             <div class="gender">
                 <h3 class="title">Gender</h3>
-                <div class="boybox">
-                    <label for="boy">Boy</label><input type="checkbox" name="gender" id="boy" value="Boy">
+                <div class="gen">
+                    <div class="boybox">
+                        <label for="boy">Boy</label><input type="checkbox" name="gender" id="boy" value="Boy">
+                    </div>
+                    <div class="girlbox">
+                        <label for="girl">Girl</label><input type="checkbox" name="gender" id="girl" value="Girl">
+                    </div>
                 </div>
-                <div class="girlbox">
-                    <label for="girl">Girl</label><input type="checkbox" name="gender" id="girl" value="Girl">
-                </div>
+                
             </div>
             <div class="group">
                 <h3 class="title">Level</h3>
-                <div class="teens"><!--es menor-->
-                    <h4 class="subtitle">TEENS</h4>
-                    <label for="ap1">AP1</label><input type="checkbox" name="ap1" id="ap1" value="ap1">
-                    <label for="ap2">AP2</label><input type="checkbox" name="ap2" id="ap2" value="ap2">
-                    <label for="ft1">FT1</label><input type="checkbox" name="ft1" id="ft1" value="ft1">
-                </div>
-                <div class="tweens">
-                    <h4 class="subtitle">TWEENS</h4>
-                    <label for="ft2">FT2</label><input type="checkbox" name="ft2" id="ft2" value="ft2">
-                    <label for="myst1">MYST1</label><input type="checkbox" name="myst1" id="myst1" value="myst1">
-                    <label for="myst2">MYST2</label><input type="checkbox" name="myst2" id="myst2" value="myst2">
+                <div class="students">
+                    <div class="teens"><!--es menor-->
+                        <h4 class="subtitle">TEENS</h4>
+                        <label for="ap1">AP1</label><input type="checkbox" name="ap1" id="ap1" value="ap1">
+                        <label for="ap2">AP2</label><input type="checkbox" name="ap2" id="ap2" value="ap2">
+                        <label for="ft1">FT1</label><input type="checkbox" name="ft1" id="ft1" value="ft1">
+                    </div>
+                    <div class="tweens">
+                        <h4 class="subtitle">TWEENS</h4>
+                        <label for="ft2">FT2</label><input type="checkbox" name="ft2" id="ft2" value="ft2">
+                        <label for="myst1">MYST1</label><input type="checkbox" name="myst1" id="myst1" value="myst1">
+                        <label for="myst2">MYST2</label><input type="checkbox" name="myst2" id="myst2" value="myst2">
+                    </div>
                 </div>
             </div>
             <input type="button" value="save">
@@ -87,10 +92,10 @@
             <input type="button" value="generate">
         </div>
         <div class="right">
-            <h2>Text Result</h2>
+            <h2 class="supertitle">Text Result</h2>
             <input type="button" value="copy">
             <input type="button" value="shuffle">
-            <p class="title">¡Your text!</p>
+            <h3 class="title">¡Your text!</h3>
             <textarea name="" id="" cols="30" rows="10"></textarea>
         </div>
     </section>
